parser.peg
start =
    ws? e:expression ws? {return e;}

ws =
    [ \n\t] ws*

validchar = 
    [0-9a-zA-Z_?!+\-=@#$%^&*/.]

atom =
    chars:validchar+
    { return chars.join(""); }

quote =
    "'" e:expression { return ["quote", e]; }

spaceexpression =
    ws e: expression { return e; }

expression =
    a:atom {return a;} /
    "(" ws* ")" {return [];} /
    "(" ws* e: expression se: spaceexpression* ws* ")"
    {return [e].concat(se);} /
    quote
